@@ -869,6 +869,34 @@ operator|.
 name|getTerms
 argument_list|()
 decl_stmt|;
+if|if
+condition|(
+name|phraseQueryTerms
+operator|.
+name|length
+operator|==
+literal|1
+condition|)
+block|{
+name|extractWeightedSpanTerms
+argument_list|(
+name|terms
+argument_list|,
+operator|new
+name|SpanTermQuery
+argument_list|(
+name|phraseQueryTerms
+index|[
+literal|0
+index|]
+argument_list|)
+argument_list|,
+name|boost
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
 name|SpanQuery
 index|[]
 name|clauses
@@ -1008,6 +1036,7 @@ argument_list|,
 name|boost
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 elseif|else
 if|if
