@@ -18,6 +18,28 @@ package|;
 end_package
 begin_import
 import|import
+name|javax
+operator|.
+name|xml
+operator|.
+name|parsers
+operator|.
+name|DocumentBuilder
+import|;
+end_import
+begin_import
+import|import
+name|javax
+operator|.
+name|xml
+operator|.
+name|parsers
+operator|.
+name|DocumentBuilderFactory
+import|;
+end_import
+begin_import
+import|import
 name|java
 operator|.
 name|io
@@ -115,28 +137,6 @@ operator|.
 name|util
 operator|.
 name|StringTokenizer
-import|;
-end_import
-begin_import
-import|import
-name|javax
-operator|.
-name|xml
-operator|.
-name|parsers
-operator|.
-name|DocumentBuilder
-import|;
-end_import
-begin_import
-import|import
-name|javax
-operator|.
-name|xml
-operator|.
-name|parsers
-operator|.
-name|DocumentBuilderFactory
 import|;
 end_import
 begin_import
@@ -279,6 +279,21 @@ name|lucene
 operator|.
 name|analysis
 operator|.
+name|ngram
+operator|.
+name|NGramTokenizer
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
 name|tokenattributes
 operator|.
 name|CharTermAttribute
@@ -324,19 +339,6 @@ name|lucene
 operator|.
 name|document
 operator|.
-name|IntPoint
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|document
-operator|.
 name|Document
 import|;
 end_import
@@ -364,6 +366,19 @@ operator|.
 name|document
 operator|.
 name|FieldType
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
+name|IntPoint
 import|;
 end_import
 begin_import
@@ -989,6 +1004,15 @@ operator|.
 name|automaton
 operator|.
 name|RegExp
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Test
 import|;
 end_import
 begin_import
@@ -10351,6 +10375,175 @@ name|helper
 operator|.
 name|start
 argument_list|()
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testHighlighterWithPhraseQuery
+specifier|public
+name|void
+name|testHighlighterWithPhraseQuery
+parameter_list|()
+throws|throws
+name|IOException
+throws|,
+name|InvalidTokenOffsetsException
+block|{
+specifier|final
+name|Analyzer
+name|analyzer
+init|=
+operator|new
+name|Analyzer
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|protected
+name|TokenStreamComponents
+name|createComponents
+parameter_list|(
+name|String
+name|fieldName
+parameter_list|)
+block|{
+return|return
+operator|new
+name|TokenStreamComponents
+argument_list|(
+operator|new
+name|NGramTokenizer
+argument_list|(
+literal|4
+argument_list|,
+literal|4
+argument_list|)
+argument_list|)
+return|;
+block|}
+block|}
+decl_stmt|;
+specifier|final
+name|String
+name|fieldName
+init|=
+literal|"substring"
+decl_stmt|;
+specifier|final
+name|List
+argument_list|<
+name|BytesRef
+argument_list|>
+name|list
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|list
+operator|.
+name|add
+argument_list|(
+operator|new
+name|BytesRef
+argument_list|(
+literal|"uchu"
+argument_list|)
+argument_list|)
+expr_stmt|;
+specifier|final
+name|PhraseQuery
+name|query
+init|=
+operator|new
+name|PhraseQuery
+argument_list|(
+name|fieldName
+argument_list|,
+name|list
+operator|.
+name|toArray
+argument_list|(
+operator|new
+name|BytesRef
+index|[
+name|list
+operator|.
+name|size
+argument_list|()
+index|]
+argument_list|)
+argument_list|)
+decl_stmt|;
+specifier|final
+name|QueryScorer
+name|fragmentScorer
+init|=
+operator|new
+name|QueryScorer
+argument_list|(
+name|query
+argument_list|,
+name|fieldName
+argument_list|)
+decl_stmt|;
+specifier|final
+name|SimpleHTMLFormatter
+name|formatter
+init|=
+operator|new
+name|SimpleHTMLFormatter
+argument_list|(
+literal|"<b>"
+argument_list|,
+literal|"</b>"
+argument_list|)
+decl_stmt|;
+specifier|final
+name|Highlighter
+name|highlighter
+init|=
+operator|new
+name|Highlighter
+argument_list|(
+name|formatter
+argument_list|,
+name|fragmentScorer
+argument_list|)
+decl_stmt|;
+name|highlighter
+operator|.
+name|setTextFragmenter
+argument_list|(
+operator|new
+name|SimpleFragmenter
+argument_list|(
+literal|100
+argument_list|)
+argument_list|)
+expr_stmt|;
+specifier|final
+name|String
+name|fragment
+init|=
+name|highlighter
+operator|.
+name|getBestFragment
+argument_list|(
+name|analyzer
+argument_list|,
+name|fieldName
+argument_list|,
+literal|"Buchung"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"B<b>uchu</b>ng"
+argument_list|,
+name|fragment
+argument_list|)
 expr_stmt|;
 block|}
 DECL|method|testUnRewrittenQuery
